--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.16",
+    "axios": "^1.7.2",
     "vue": "^3.2.45",
     "vue-router": "4"
   },
