--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1659.0",
     "axios": "^1.7.2",
     "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
     "vue-router": "4"
   },
   "devDependencies": {
